completed music streaming functionality

--- a/theme/sass/_base.scss
+++ b/theme/sass/_base.scss
@@ -21,6 +21,17 @@ $color-carrot: #E67E22;
 $color-green-sea: #16A085;
 $color-pastel-orange: #FFD786;
 
+// playing colours
+$playing-xbmc: $color-orange;
+$playing-local: #2BA5CC;
+
+$color-darkest-xbmc: $color-slate;
+$color-dark-xbmc: $color-slate;
+
+$color-darkest-local: #7F8486;
+$color-dark-local: #6C6F6F;
+
+
 //sizing
 $height-logo: 105px;
 $height-header: 50px;
