--- a/theme/sass/page.scss
+++ b/theme/sass/page.scss
@@ -468,7 +468,7 @@ h4 {
     overflow: hidden;
     position: relative;
     white-space: nowrap;
-    background: #F0EEEC;
+    background: #F6F5F3;
     padding: 0 0 0 20px;
     margin: 15px 0 0 0;
     a {
