homepage support for local playback

--- a/theme/sass/components/_pages.scss
+++ b/theme/sass/components/_pages.scss
@@ -310,6 +310,9 @@ body {
         }
       }
     }
+    #page-header {
+      background-color: transparent !important;
+    }
   }
 
   // Landings
