--- a/theme/sass/styles.scss
+++ b/theme/sass/styles.scss
@@ -37,5 +37,8 @@
 // page specific styles
 @import "components/playlists";
 
+// Video specific styles
+@import "components/video";
+
 // responsive styles
 @import "breakpoints/responsive";
