--- a/theme/sass/components/_regions.scss
+++ b/theme/sass/components/_regions.scss
@@ -123,6 +123,44 @@ body.fixed-header {
         //color: $color-darkest-xbmc;
       }
     }
+    .nav-tabs {
+      margin-left: -19px;
+      float: left;
+      border: 0;
+      a {
+        font-size: 15px;
+        background: rgba(246, 245, 243, 0.23);
+        color: #CDD2D3;
+        padding: 0 30px;
+        margin-left: 0;
+        margin-right: 1px;
+        width: auto;
+        position: relative;
+        &:hover,
+        &.active {
+          background: rgba(246, 245, 243, 0.10);
+          color: #ddd;
+        }
+        &.active {
+          background: $color-slate;
+          color: #fff;
+          //height: 49px;
+          //border-bottom: $color-slate 1px solid;
+          border-left: $color-slate 1px solid;
+          &:after {
+            content: "";
+            position: absolute;
+            bottom: -3px;
+            left: -12px;
+            margin: auto 0;
+            width: 0;
+            height: 0;
+            border: 11px solid rgba(0, 0, 0, 0);
+           // border-bottom-color: #777;
+          }
+        }
+      }
+    }
 
   }
   .album-actions-wrapper {
