--- a/theme/sass/_mixins.scss
+++ b/theme/sass/_mixins.scss
@@ -53,3 +53,10 @@
   column-fill: auto;
 }
 
+
+@mixin center-absolute($gutter: 0) {
+  position: absolute;
+  right: $gutter; left: $gutter;
+  top: $gutter; bottom: $gutter;
+  margin: auto;
+}
