--- a/theme/sass/components/_albums.scss
+++ b/theme/sass/components/_albums.scss
@@ -63,7 +63,7 @@ $album-margin-right: $album-meta-width + 10;
       }
       .album-actions-wrapper {
         display: block;
-        .thumbs-up .icon-thumbs-up {
+        .thumbs-up .fa-thumbs-up {
           color: #fff;
         }
       }
