--- a/theme/sass/components/_pages.scss
+++ b/theme/sass/components/_pages.scss
@@ -314,6 +314,39 @@ h3.search-heading {
       }
     }
   }
+
+}
+
+.tab-content {
+  .buttons {
+    margin: 40px 0 20px;
+    .btn {
+      background: $color-trans-light;
+      color: rgba(68, 68, 68, 0.71);
+      padding: 8px 17px;
+      margin-right: 5px;
+      margin-bottom: 10px;
+      &:hover {
+        background: #ccc;
+        color: rgba(68, 68, 68, 0.9);
+      }
+      &.cta {
+        background: rgba(230, 126, 34, 0.8);
+        color: #fff;
+        font-weight: bold;
+        &:hover {
+          background: rgba(230, 126, 34, 1);
+        }
+//        font-size: 20px;
+//        padding: 15px 25px;
+      }
+      i {
+        font-size: 14px;
+        opacity: 0.3;
+        padding-right: 8px;
+      }
+    }
+  }
 }
 
 // artist/movie/tv
@@ -334,7 +367,7 @@ h3.search-heading {
     }
   }
   &.thumbs-up {
-    .icon-thumbs-up {
+    .fa-thumbs-up {
       color: $color-carrot;
     }
   }
