--- a/theme/sass/components/_regions.scss
+++ b/theme/sass/components/_regions.scss
@@ -123,15 +123,20 @@ body.fixed-header {
         //color: $color-darkest-xbmc;
       }
     }
+    span {
+      color: rgba(246, 245, 243, 0.55);
+      font-size: 90%;
+      padding-left: 6px;
+    }
     .nav-tabs {
       margin-left: -19px;
       float: left;
       border: 0;
       a {
-        font-size: 15px;
+        font-size: 16px;
         background: rgba(246, 245, 243, 0.23);
         color: #CDD2D3;
-        padding: 0 30px;
+        padding: 0 20px;
         margin-left: 0;
         margin-right: 1px;
         width: auto;
@@ -143,7 +148,7 @@ body.fixed-header {
         }
         &.active {
           background: $color-slate;
-          color: #fff;
+          color: #eee;
           //height: 49px;
           //border-bottom: $color-slate 1px solid;
           border-left: $color-slate 1px solid;
@@ -466,15 +471,21 @@ body.fixed-header {
       li {
         float: left;
         margin: 0 0px 0 0;
-        padding: 15px 22px 15px 19px;
+        padding: 15px 10px;
         color: $color-whitesmoke;
         font-size: 112%;
         cursor: pointer;
+        @include breakpoint($width-small){
+          padding: 15px 22px 15px 19px;
+        }
         i {
           font-size: 84%;
-          margin-right: 5px;
+          margin-right: 2px;
+          @include breakpoint($width-small){
+            margin-right: 5px;
+          }
           opacity: 0.6;
-          &.icon-play {
+          &.fa-play {
             display: none;
           }
         }
@@ -503,6 +514,11 @@ body.home {
     .playing-row {
       height: 120px;
       padding-right: 132px;
+    }
+    .playlist-primary-tabs {
+      li {
+        padding: 15px 22px 15px 19px !important;
+      }
     }
   }
   #search-box {
@@ -533,7 +549,7 @@ body.home {
   display: none;
   background-color: rgba(255,255,255,0.78);
   @include transition(all 0.3s linear);
-  .icon-search {
+  .fa-search {
     display: inline-block;
     padding: 0;
     font-size: 20px;
