--- a/theme/sass/components/_widgets.scss
+++ b/theme/sass/components/_widgets.scss
@@ -167,3 +167,35 @@ input[type="text"] {
     }
   }
 }
+
+.content-tabs .library-pager,
+.library-pager {
+  overflow: hidden;
+  @include breakpoint ($width-small){
+    margin-top: 8px;
+  }
+  span {
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-right: 8px;
+  }
+  a {
+    @include box-sizing(border-box);
+    float: left;
+    width: 48%;
+    padding: 5px 20px;
+    background: rgba(255,255,255,0.3);
+    color: rgba(85, 85, 85, 0.36);
+    font-size: 15px;
+    text-align: center;
+    &.library-next {
+      float: right;
+      width: 48%;
+    }
+    &:hover {
+      background: rgba(255,255,255,0.9);
+      color: rgba(85, 85, 85, 0.9);
+    }
+  }
+}
